<resources>
    <string name="app_name">Field Book</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="genericerror">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="areyousure">Are you sure?</string>
    <string name="importdb">Import</string>
    <string name="warning">Warning</string>
    <string name="later">Later</string>
    <string name="search">Search</string>
    <string name="resources">Resources</string>
    <string name="currentvalue">Current value</string>
    <string name="traitdetails">Trait details</string>
    <string name="nodata">No data</string>
    <string name="theme">Theme</string>
    <string name="lock_data">Lock data</string>
    <string name="unlock_data">Unlock data</string>
    <string name="minusday">-1</string>
    <string name="enter">Enter</string>
    <string name="plusday">+1</string>
    <string name="nodate">No Date</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="capture">Capture</string>
    <string name="stop">Stop</string>
    <string name="stored">Data has been saved</string>
    <string name="hardwaremissing">Your device does not contain the necessary hardware for this feature</string>
    <string name="photomissing">Photo does not exist</string>
    <string name="photodecodefail">Photo cannot be read</string>
    <string name="valueless">Value is less than allowed minimum</string>
    <string name="valuemore">Value is larger than allowed maximum</string>
    <string name="rustwarning">Severity already stored</string>
    <string name="deletePhoto">Are you sure you want to delete this photo?</string>
    <string name="settings">Settings</string>
    <string name="fields">Fields</string>
    <string name="traits">Traits</string>
    <string name="profile">Profile</string>
    <string name="export">Export</string>
    <string name="advanced">Advanced</string>
    <string name="language">Language</string>
    <string name="datasyncmenuitem">Data Synchronization</string>
    <string name="updatemsg">Changelog</string>
    <string name="sampledata">Sample data</string>
    <string name="loadsampledata">Would you like to load the sample data provided?</string>
    <string name="traitname">Trait name</string>
    <string name="sort">Sort</string>
    <string name="delete">Delete</string>
    <string name="visibility">Visibility</string>
    <string name="optional">Optional</string>
    <string name="addtrait">Add trait</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="numeric">Numeric</string>
    <string name="qualitative">Categorical</string>
    <string name="date">Date</string>
    <string name="percent">Percent</string>
    <string name="counter">Counter</string>
    <string name="rustrating">Disease Rating</string>
    <string name="bool">Boolean</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="audio">Audio</string>
    <string name="multicategorical">Multicat</string>
    <string name="angle">Angle</string>
    <string name="video">Video</string>
    <string name="location_trait">Location</string>
    <string name="trait">Trait</string>
    <string name="format">Format</string>
    <string name="def">Default</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="importexport">Import/Export</string>
    <string name="import_title">Import</string>
    <string name="truevalue">True</string>
    <string name="falsevalue">False</string>
    <string name="catseparator">Separate categories with /</string>
    <string name="mandatorytrait">Trait name cannot be empty</string>
    <string name="traitexists">Trait already exists</string>
    <string name="deletetrait">Delete trait</string>
    <string name="deletealltraits">Delete all traits</string>
    <string name="notanumber">Default, minimum, and maximum must be numeric</string>
    <string name="notemptycategory">Category cannot be empty</string>
    <string name="trait_export_check">Would you like to export the current trait list before importing a new list?</string>
    <string name="tips">Tutorial</string>
    <string name="quickgoto">Quick GoTo</string>
    <string name="cycle">Cycling traits advances entry</string>
    <string name="useday">Use day of year</string>
    <string name="ignoreentries">Hide entries with data</string>
    <string name="disableshare">Disable file sharing</string>
    <string name="disableentrynavleft">Disable left entry arrow</string>
    <string name="disableentrynavright">Disable right entry arrow</string>
    <string name="barcodescan">Camera barcode scanner</string>
    <string name="rangechime">Primary order sound</string>
    <string name="nextmissingenable">Next entry with no data</string>
    <string name="jumptoplotid">Move to unique identifier</string>
    <string name="datagrid">Datagrid</string>
    <string name="tips_desc">Adds a tutorial icon to the main, settings, fields, and traits screens</string>
    <string name="quickgoto_desc">Changes middle section of main screen to the legacy Quick GoTo</string>
    <string name="cycle_desc">After going through all traits, the app goes to the next entry</string>
    <string name="useday_desc">Use day of year when collecting data instead of the date</string>
    <string name="ignoreentries_desc">Skips entries that have data for the current trait</string>
    <string name="disableshare_desc">When files are exported, the share dialog will not be displayed</string>
    <string name="disableentrynavleft_desc">If no data has been collected, disables left entry arrow</string>
    <string name="disableentrynavright_desc">If no data has been collected, disables right entry arrow</string>
    <string name="barcodescan_desc">Opens camera to scan barcode and move to the specific entry</string>
    <string name="rangechime_desc">Notification sound when the primary order changes</string>
    <string name="nextmissingenable_desc">Adds a button to the toolbar that jumps to the next entry with no data for the current trait</string>
    <string name="jumptoplotid_desc">Opens dialog to input unique id and move to specific entry</string>
    <string name="datagrid_desc">Displays a spreadsheet of plots and traits showing collected data</string>
    <string name="nomatches">No matching value</string>
    <string name="nextmissingbutton">Next empty entry</string>
    <string name="jumptoplotidbutton">Go to ID</string>
    <string name="barcodescantitle">Scan barcode</string>
    <string name="scan">Scan</string>
    <string name="disableentryanavwarning">Data must be collected before you can go to the next entry</string>
    <string name="tutorial">Tutorial</string>
    <string name="tipsdesc">Would you like to enable the tutorial? This setting can be changed in the Advanced Settings.</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="mhelp1">The InfoBars at the top of the screen show extra data for each entry. These can be changed using the dropdown menus.</string>
    <string name="mhelp2">The large, black arrows move between entries. The small, green arrows move between traits.</string>
    <string name="mhelp3">A list of active traits is displayed when the current trait is pressed.</string>
    <string name="mhelp4">The folder icon displays a list of files in the Resources folder.</string>
    <string name="mhelp5">The search icon allows database queries.</string>
    <string name="mhelp6">The document icon displays a summary of all data for a given entry.</string>
    <string name="mhelp7">All other options are in the navigation drawer, on the left.</string>
    <string name="shelp1">To import and manage fields, select Fields.</string>
    <string name="shelp2">To add, import, or manage traits, select Traits.</string>
    <string name="shelp3">To set the person and location, select Profile.</string>
    <string name="shelp4">To export data, select Export. Data can be exported in two formats: database or table. Columns from the original file can be included or excluded from the exported file.</string>
    <string name="shelp5">Advanced Settings contains several optional settings to augment how data is collected.</string>
    <string name="shelp6">Once data is imported, the back button in the top left corner will take you to the main screen.</string>
    <string name="thelp1">Add Trait on the menu creates a new trait. It is not possible to use the keyboard and tutorial at the same time. Different trait formats have different layouts.</string>
    <string name="thelp2">To import trait files, choose Import on the toolbar.</string>
    <string name="thelp3">Consult the app manual for additional information about trait creation.</string>
    <string name="thelp4">Use the checkbox on each trait to toggle its visibility on the main collection screen. Uncheck any traits you do not want to collect.</string>
    <string name="thelp5">Press the back button in the top left corner to return to the Settings screen.</string>
    <string name="fhelp1">Add Field on the toolbar allows a field file to be imported.</string>
    <string name="fhelp2">Files must contain three columns: a unique identifier, a primary order, and a secondary order. The primary/secondary order are used for navigation in the field.</string>
    <string name="fhelp3">The field with the brown radio button is the currently active field.</string>
    <string name="fhelp4">To delete a field, open the menu on the left side of a field name and select Delete.</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="developers">Developers</string>
    <string name="translators">Translators</string>
    <string name="versiontitle">Version: </string>
    <string name="devr">Trevor Rife, Kansas State University</string>
    <string name="devremail">trife@ksu.edu</string>
    <string name="devrsite">https://github.com/trife/Field-Book</string>
    <string name="devp">Jesse Poland, Kansas State University</string>
    <string name="devpemail">jpoland@ksu.edu</string>
    <string name="devpsite">http://wheatgenetics.org</string>
    <string name="translist">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman</string>
    <string name="otherapps">Other Apps</string>
    <string name="dbformat">Database</string>
    <string name="tableformat">Table</string>
    <string name="filename">Filename</string>
    <string name="headerformat">Format</string>
    <string name="allcolumns">All imported columns</string>
    <string name="fieldcolumns">Field columns</string>
    <string name="onlyunique">Only unique identifier</string>
    <string name="alltraits">All traits</string>
    <string name="activetraits">Only active traits</string>
    <string name="exporterror">Error during export</string>
    <string name="exportcomplete">Export complete</string>
    <string name="exportmsg">Exporting…</string>
    <string name="noexportcheck">Export type must be selected</string>
    <string name="nofieldcheck">Field column type must be selected</string>
    <string name="notraitcheck">Trait type must be selected</string>
    <string name="overwrite_previous_export">Overwrite previously exported file</string>
    <string name="english">English (US)</string>
    <string name="syncupload">Upload data</string>
    <string name="syncdownload">Download data</string>
</resources>