<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fieldcolumns"
                android:textColor="@color/s_text"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/fieldsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/syncOnlyUnique"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onlyunique"
                    android:textSize="@dimen/text_size_medium" />

                <RadioButton
                    android:id="@+id/syncAllColumns"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allcolumns"
                    android:textSize="@dimen/text_size_medium" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traits"
                android:textColor="@color/s_text"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/traitsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/syncActiveTraits"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activetraits"
                    android:textSize="@dimen/text_size_medium" />

                <RadioButton
                    android:id="@+id/syncAllTraits"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alltraits"
                    android:textSize="@dimen/text_size_medium" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/myList"
        android:choiceMode="singleChoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/button_default_width"
            android:text="@string/close"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>