<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp">

    <Button
        android:id="@+id/uploadDataBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/button_default_width"
        android:text="@string/syncupload"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/downloadDataBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/button_default_width"
        android:text="@string/syncdownload"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minWidth="@dimen/button_default_width"
        android:text="@string/okay"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


</LinearLayout>